--- a/app/views/vans/index.html.erb
+++ b/app/views/vans/index.html.erb
@@ -1,23 +1,61 @@
 <div class="container">
   <h1>All vans  (<%= @vans.count%>)</h1>
-  <div id="vans">
-    <div class="row">
-      <% @vans.each do |van| %>
-      <div class="col">
-        <div class="card" style="width: 18rem; height:24rem">
-          <div class="card-body">
-            <img src="https://images.unsplash.com/photo-1561361513-2d000a50f0dc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1776&q=80" alt="" style="width:100%; height:60%; object-fit: cover;">
-            <h5 class="card-title"><%=van.brand%></h5>
-            <p class="card-text"><%=van.location%></p>
-            <div class='d-flex'>
-              <p style="margin-right:10px;">2<i class="fa-solid fa-user-group"></i></p>
-              <p><%=van.price_per_day%><i class="fa-solid fa-euro-sign"></i></p>
-            </div>
 
+</div>
+
+
+<div class="mx-auto mt-5" style="width: 80%;">
+  <div class="row">
+    <div class="col justify-content-around row">
+      <% @vans.each do |van| %>
+        <div class="col-3 card-trip border rounded-4 px-0 m-2 d-flex flex-column justify-content-between">
+            <div class="d-flex align-items-center ">
+              <div id="carouselExampleIndicators" class=" card-trip-img carousel slide" data-bs-ride="true">
+                <div class="carousel-indicators">
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                  <div class="carousel-item card-trip-img active">
+                    <img src="https://images.unsplash.com/photo-1561361513-2d000a50f0dc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1776&q=80"/>
+                  </div>
+                  <div class="carousel-item card-trip-img">
+                    <img src="https://images.unsplash.com/photo-1561361513-2d000a50f0dc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1776&q=80"/>
+                  </div>
+                  <div class="carousel-item card-trip-img">
+                    <img src="https://images.unsplash.com/photo-1561361513-2d000a50f0dc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1776&q=80"/>
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+
+
+
+
+            </div>
+          <div class="m-2">
+            <div class= "d-flex justify-content-start">
+              <h2 style="color: #003459;"><%=van.brand%> </h2>
+            </div>
+            <div class="my-2 d-flex flex-column">
+              <p class="card-text" style="color: #003459;"><%=van.location%></p>
+            </div>
+            <div class="d-flex flex-row justify-content-between">
+              <p><span style="color: #005FA3; font-size: 14px; font-weight: 400;"><%=van.price_per_day%><i class="fa-solid fa-euro-sign"></i> day</span></p>
+              <p><%= link_to "En savoir plus", van_path(van), style:"color:#00477A; text-decoration: none;"%>  <%= link_to "Edit", edit_van_path(van), style:"color:#00477A; text-decoration: none;"%></p>
+              <%= link_to "", @van, data:{turbo_method: :delete, turbo_confirm: "Are you sure?"}, style: "text-decoration: none;  ", class:"card-trip-user fa-solid fa-trash-can" %>
+            </div>
           </div>
-          <div class="bouton_card d-flex"  style="background-color:#F8F9FA;">
-          <p><%= link_to "En savoir plus", van_path(van), style:"color:blue;"%>  <%= link_to "Edit", edit_van_path(van), style:"color:yellow;"%>     <%= link_to "Remove", @van, method: :delete , style:"color:red;"%>     </p> </div>
         </div>
-      </div>
       <% end %>
+    </div>
+  </div>
 </div>
