--- a/app/views/vans/show.html.erb
+++ b/app/views/vans/show.html.erb
@@ -19,31 +19,22 @@
           </div>
         </div>
 
-    <div class="col-6 col-md-4">
-      <div class="card w-100" style="background-color:#F8F9FA;">
-        <div class="card-body">
-          <h6 class="card-title" style="text-align:left;">Book this van!</h6>
-          <div class="input-group mb-3">
-            <span class="input-group-text" id="basic-addon1">From:</span>
-            <input type="date" class="form-control" placeholder="11/12/2022" aria-label="date" aria-describedby="basic-addon1">
-          </div>
-          <div class="input-group mb-3">
-            <span class="input-group-text" id="basic-addon1">To:</span>
-            <input type="date" class="form-control" placeholder="11/12/2022" aria-label="date" aria-describedby="basic-addon1">
-          </div>
-          <div class="d-grid gap-2">
-           <button class="btn btn-primary" type="button">Book</button>
-         </div>
-        </div>
-      </div>
 
-      <div class="card w-100" style="background-color:#F8F9FA; margin-top:20px;">
-        <div class="card-body" style="text-align:left;">
-          <h4 class="card-title">Details</h4>
-          <div class='d-flex'>
-            <p style="margin-right:30px;">2<i class="fa-solid fa-user-group"></i></p>
-            <p><%=@van.price_per_day%><i class="fa-solid fa-euro-sign"></i></p>
-          </div></p>
+
+<div class="container mt-4">
+  <div class="row">
+    <div class="col-6 m-auto">
+      <div class="van-form">
+        <h1>Book a new Van</h1>
+        <div class="mt-3">
+
+
+          <%= simple_form_for [@van, @booking] do |f| %>
+            <%= f.input :start_date, as: :date, html5: true %>
+            <%= f.input :end_date, as: :date, html5: true %>
+            <%= f.submit "Book your van", class: "btn btn-primary" %>
+          <% end %>
+
         </div>
       </div>
     </div>
