--- a/app/assets/stylesheets/components/_connexion-form.scss
+++ b/app/assets/stylesheets/components/_connexion-form.scss
@@ -1,7 +1,18 @@
+.page-form{
+  background-image: url("https://images.unsplash.com/photo-1597131527856-13cdb8dc050e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3009&q=80");
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 100%;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+}
+
 
 .form-container{
   width: 70%;
-  background-color: #00477A;
+  background-image: linear-gradient(to top, #0c3483 0%, #a2b6df 100%, #6b8cce 100%, #a2b6df 100%);
   color: white;
   padding: 15px;
   border-radius: 5px;
@@ -24,7 +35,6 @@
   background-color: #005FA3;
   color: white;
 }
-
 
 
 .form-container a {
