--- a/app/views/vans/show.html.erb
+++ b/app/views/vans/show.html.erb
@@ -1,3 +1,5 @@
+<%= render "shared/navbar" %>
+
 <div class="container-fluid p-0" style="height:400px; overflow: hidden;">
   <img src="https://images.unsplash.com/photo-1561361513-2d000a50f0dc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1776&q=80" alt="" style="width:100%; height:100%; object-fit: cover;">
 </div>
