--- a/app/assets/stylesheets/components/_connexion-form.scss
+++ b/app/assets/stylesheets/components/_connexion-form.scss
@@ -1,4 +1,4 @@
-.page-form{
+.modal-content{
   background-image: url("https://images.unsplash.com/photo-1597131527856-13cdb8dc050e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3009&q=80");
   background-size: cover;
   background-position: center;
@@ -11,8 +11,7 @@
 
 
 .form-container{
-  width: 70%;
-  background-image: linear-gradient(to top, #0c3483 0%, #a2b6df 100%, #6b8cce 100%, #a2b6df 100%);
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   color: white;
   padding: 15px;
   border-radius: 5px;
@@ -24,16 +23,6 @@
 
 .form-control{
   border-radius: 5px;
-}
-
-.form-actions {
-  margin: auto;
-  width: 20%;
-  text-align: center;
-  padding: 5px 10px;
-  border-radius: 5px;
-  background-color: #005FA3;
-  color: white;
 }
 
 
