--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,5 +1,3 @@
-<%= render "shared/navbar" %>
-
 <div class="app-container">
   <div class="app-content">
     <div class="app-sidebar">
@@ -17,6 +15,9 @@
       </div>
       <% end %>
     </div>
+
+    <div class="container">
+
     <div class="projects-section">
       <div class="projects-section-header">
         <p>Van locations</p>
@@ -30,35 +31,37 @@
           </div>
         </div>
       </div>
-      <div class="project-boxes jsGridView">
-        <div class="project-box-wrapper">
-          <div class="project-box" style="background-color: #fee4cb;">
-            <div class="project-box-header">
-              <span>December 10, 2020</span>
-              <div class="more-wrapper">
-                <button class="project-btn-more">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-vertical">
-                    <circle cx="12" cy="12" r="1" />
-                    <circle cx="12" cy="5" r="1" />
-                    <circle cx="12" cy="19" r="1" /></svg>
-                </button>
-          </div>
-        </div>
 
 
-        <div class="project-box-content-header">
-          <p class="box-content-header">Van stylé qui cartonne</p>
-          <p class="box-content-subheader">mercedes</p>
-        </div>
-        <div class="image_trip">
-          <img src="https://images.unsplash.com/photo-1561361513-2d000a50f0dc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1776&q=80" alt="" style="width:100%; height:60%; object-fit: cover;">
-        </div>
-        <div class="project-box-footer">
-          <div class="days-left" style="color: #ff942e;">
-            In 48 days
+      <%# CARD DASHBOARD %>
+
+      <div class="col-3 card-trip-dashboard border rounded-4 px-0 mb-4 d-flex flex-column justify-content-between">
+
+          <div class="m-2">
+            <div class= "d-flex justify-content-center">
+              <h2 style="color: #003459;"> Titre Van </h2>
+            </div>
+            <div class="my-2 d-flex justify-content-center ">
+              <p class="card-text-dashboard" style="color: #003459;">Marque du Van - Lieu</p>
+            </div>
+            <div class="d-flex flex-row justify-content-around">
+              <p><span style="color: #005FA3; font-size: 14px; font-weight: 400;">Date de départ - Date de fin</span></p>
+              <p class= "days"> In 48 days</p>
+            </div>
           </div>
-        </div>
+          <img class="card-trip-img-dashboard" src="https://images.unsplash.com/photo-1561361513-2d000a50f0dc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1776&q=80"/>
       </div>
+
+
+
+
+
+      </div>
+    </div>
+
+
+
+
     </div>
   </div>
 </div>
