--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,11 +1,42 @@
-
 .navbar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  background: red;
+  padding: 10px 20px;
+  background-color: transparent;
+  transition: 0.5s background-color ease;
+  position: fixed;
+  width: 100%;
+}
+
+.navbar-white{
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   background: white;
   padding: 10px 20px;
+  background-color: transparent;
+  transition: 0.5s background-color ease;
+  position: fixed;
+  width: 100%;
 }
+
+.navbar-left{
+  display: flex;
+  flex-direction: row;
+  width: 10%;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.navbar-left a,p{
+  margin: 0px;
+  text-decoration: none;
+  font-size: 20px;
+  color: #005FA3;
+}
+
 
 .navbar-right{
   display: flex;
@@ -18,20 +49,13 @@
 }
 
 .nav-item{
-  padding: 5px;
+  padding: 0px 12px;
 }
 
-.navbar .navbar-brand img {
-  width: 30px;
+.navbar-logo img {
+  width: 25px;
 }
 
-
-
-.navbar {
-  /* [...] */
-  background-color: transparent;
-  transition: 0.5s background-color ease;
-}
 
 .navbar-lewagon-white {
   background-color: white;
