--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,17 +1,16 @@
 <div class="navbar" data-controller="navbar" data-action="scroll@window->navbar#updateNavbar">
-  <div class="navbar-logo">
-    <%=link_to dashboard_path do %>
-      <div class="navbar-brand d-flex">
-        <img src="https://www.mpadeco.com/thumb.php?zc=3&f=0&src=/sites/mpadeco/files/products/a7919613977f4838bc2ba176ef45c515.png&fl=none&w=500&h=500" />
-        caravana
-      </div>
+  <div class="navbar-left">
+    <div class="navbar-logo">
+      <%=link_to dashboard_path do %>
+      <img src="https://www.mpadeco.com/thumb.php?zc=3&f=0&src=/sites/mpadeco/files/products/a7919613977f4838bc2ba176ef45c515.png&fl=none&w=500&h=500" />
+    </div>
+    <p>Caravana</p>
     <%end%>
   </div>
   <div class="navbar-right" id="navbarSupportedContent">
     <ul class="navbar-nav me-auto">
       <li class="nav-item active " data-bs-toggle="modal" data-bs-target="#loginModal">
         <a class="nav-link" href="#">Log In</a>
-         <%# <%=link_to "Log In", new_user_session_path, class:"nav-link"%>
       </li>
       <li class="nav-item">
         <a data-bs-toggle="modal" data-bs-target="#signinModal" class="nav-link" href="#">Sign Up</a>
