--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -95,10 +95,9 @@ a:hover {
 }
 
 .days {
-
   position: absolute;
-  top: 260px;
-  left: 10px;
+  top: 85%;
+  left: 38.5%;
   background-color: rgba(255,255,255,0.6);
   font-size: 12px;
   border-radius: 20px;
