--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -1,56 +1,43 @@
 @import url("https://fonts.googleapis.com/css?family=DM+Sans:400,500,700&display=swap");
 
 
-.app {
-  &-container {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    background-color: var(--app-container);
-    transition: .2s;
-    max-width: 1800px;
-
-    button, input, optgroup, select, textarea {
-      font-family: 'DM Sans', sans-serif;
-    }
-  }
+.app-container {
+  width: 100%;
+  display: flex;
+  height: 100%;
+  padding: 70px 0px;
 }
 
-  .app-sidebar {
-  padding: 40px 16px;
+.app-content{
+  display: flex;
+  height: 100%;
+}
+
+
+.app-sidebar {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  margin-right: 25px;
+  margin-left: 5px;
 
-  &-link {
-    color: var(--main-color);
-    color: var(--link-color);
-    margin: 16px 0;
-    transition: .2s;
-    border-radius: 50%;
-    flex-shrink: 0;
-    width: 40px;
-    height: 40px;
+  &-link{
+    color: var(--black);
     display: flex;
     justify-content: center;
+    text-align: center;
     align-items: center;
-
-    &:hover {
-      background-color: var(--link-color-hover);
-      color: var(--link-color-active);
-    }
-
-    &.active {
-      background-color: var(--link-color-active-bg);
-      color: var(--link-color-active);
-    }
+    margin: 25px 0px;
+    border-radius: 10px;
+    width: 40px;
+    height: 40px;
+    box-shadow: 0.8rem 0.8rem 1.4rem var(--greyLight-2), -0.2rem -0.2rem 1.8rem var(--white);
+    transition: all 0.3s ease-in-out;
   }
 }
 
-.projects-section {
+.vans-container {
   flex: 2;
-  background-color: var(--projects-section);
+  background-color: white;
   border-radius: 32px;
   padding: 32px 32px 0 32px;
   overflow: hidden;
@@ -87,207 +74,17 @@
   }
 }
 
-.projects-status {
+.vans-container-header{
   display: flex;
+  margin-bottom: 10px;
 }
 
-.item-status {
-  display: flex;
-  flex-direction: column;
-  margin-right: 16px;
-
-  &:not(:last-child) .status-type:after {
-    content: '';
-    position: absolute;
-    right: 8px;
-    top: 50%;
-    transform: translatey(-50%);
-    width: 6px;
-    height: 6px;
-    border-radius: 50%;
-    border: 1px solid var(--secondary-color);
-  }
-}
-
-.status-number {
-  font-size: 24px;
-  line-height: 32px;
-  font-weight: 700;
-  color: var(--main-color);
-}
-
-.status-type {
-  position: relative;
-  padding-right: 24px;
-  color: var(--secondary-color);
-}
-
-
-.project-boxes {
-  margin: 0 -8px;
-  overflow-y: auto;
-
-  &.jsGridView {
-    display: flex;
-    flex-wrap: wrap;
-
-    .project-box-wrapper {
-      width: 33.3%;
-    }
-  }
-
-  &.jsListView {
-    .project-box {
-      display: flex;
-      border-radius: 10px;
-      position: relative;
-      > * {
-        margin-right: 24px;
-      }
-    }
-
-    .more-wrapper {
-      position: absolute;
-      right: 16px;
-      top: 16px;
-    }
-
-    .project-box-content-header {
-      order: 1;
-      max-width: 120px;
-    }
-
-    .project-box-header {
-      order: 2;
-    }
-
-    .project-box-footer {
-      order: 3;
-      padding-top: 0;
-      flex-direction: column;
-      justify-content: flex-start;
-    }
-
-    .project-box-footer:after {
-      display: none;
-    }
-
-    .participants {
-      margin-bottom: 8px;
-    }
-
-    .project-box-content-header p {
-      text-align: left;
-      overflow: hidden;
-      white-space: nowrap;
-      text-overflow: ellipsis;
-    }
-
-    .project-box-header > span {
-      position: absolute;
-      bottom: 16px;
-      left: 16px;
-      font-size: 12px;
-    }
-
-    .box-progress-wrapper {
-      order: 3;
-      flex: 1;
-    }
-  }
-}
-
-.project-box {
-  --main-color-card: #dbf6fd;
-  border-radius: 30px;
-  padding: 16px;
-  background-color: var(--main-color-card);
-
-  &-header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 16px;
-    color: var(--main-color);
-
-    span {
-      color: #4A4A4A;
-      opacity: .7;
-      font-size: 14px;
-      line-height: 16px;
-    }
-  }
-
-  &-content-header {
-    text-align: center;
-    margin-bottom: 16px;
-
-    p { margin: 0; }
-  }
-
-  &-wrapper {
-    padding: 8px;
-    transition: .2s;
-  }
-}
-
-.project-btn-more {
-  padding: 0;
-  height: 14px;
-  width: 24px;
-  height: 24px;
-  position: relative;
-  background-color: transparent;
-  border: none;
-  flex-shrink: 0;
-
-  /*&:after, &:before {
-    content: '';
-    position: absolute;
-    width: 6px;
-    height: 6px;
-    border-radius: 50%;
-    background-color: var(--main-color);
-    opacity: .8;
-    left: 50%;
-    transform: translatex(-50%);
-  }
-
-  &:before { top: 0;}
-  &:after { bottom: 0; }*/
-}
-
-.more-wrapper {
-  position: relative;
-}
-
-.box-content-header {
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 700;
-  opacity: .7;
-}
-
-.box-content-subheader {
-  font-size: 14px;
-  line-height: 24px;
-  opacity: .7;
-}
-
-
-.project-box-footer {
+.vans-container-header-left{
   display: flex;
   justify-content: space-between;
-  padding-top: 16px;
-  position: relative;
+  font-weight: normal;
+}
 
-  &:after {
-    content: '';
-    position: absolute;
-    background-color: rgba(255,255,255,0.6);;
-    width: calc(100% + 32px);
-    top: 0;
-    left: -16px;
-    height: 1px;
-  }
+.vans-upcoming{
+  margin: 10px 0px;
 }
