--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,13 +1,16 @@
+
+
+
 <div class="app-container">
   <div class="app-content">
     <div class="app-sidebar">
-      <div href="" class="app-sidebar-link active">
+      <div class="app-sidebar-link">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home">
           <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z" />
           <polyline points="9 22 9 12 15 12 15 22" /></svg>
       </div>
       <%= link_to my_vans_path do %>
-      <div href="" class="app-sidebar-link">
+      <div href="" class="app-sidebar-link active">
         <svg class="link-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="feather feather-pie-chart" viewBox="0 0 24 24">
           <defs />
           <path d="M21.21 15.89A10 10 0 118 2.83M22 12A10 10 0 0012 2v10z" />
@@ -16,54 +19,35 @@
       <% end %>
     </div>
 
-    <div class="container">
-
-    <div class="projects-section">
-      <div class="projects-section-header">
-        <p>Van locations</p>
+    <div class="vans-container">
+      <div class="vans-container-header">
+        <div class="vans-container-header-left">
+          <p class="rentals-to-come">Locations à venir </p>
+          <p class="rentals-number"><em>(8)</em></p>
+        </div>
         <p class="time"><%= Time.now %></p>
       </div>
-      <div class="projects-section-line">
-        <div class="projects-status">
-          <div class="item-status">
-            <span class="status-number">nombre à revoir</span>
-            <span class="status-type">Upcoming</span>
-          </div>
-        </div>
-      </div>
+
 
 
       <%# CARD DASHBOARD %>
 
       <div class="col-3 card-trip-dashboard border rounded-4 px-0 mb-4 d-flex flex-column justify-content-between">
-
-          <div class="m-2">
-            <div class= "d-flex justify-content-center">
-              <h2 style="color: #003459;"> Titre Van </h2>
-            </div>
-            <div class="my-2 d-flex justify-content-center ">
-              <p class="card-text-dashboard" style="color: #003459;">Marque du Van - Lieu</p>
-            </div>
-            <div class="d-flex flex-row justify-content-around">
-              <p><span style="color: #005FA3; font-size: 14px; font-weight: 400;">Date de départ - Date de fin</span></p>
-              <p class= "days"> In 48 days</p>
-            </div>
+        <div class="m-2">
+          <div class= "d-flex justify-content-center">
+            <h2 style="color: #003459;"> Titre Van </h2>
           </div>
-          <img class="card-trip-img-dashboard" src="https://images.unsplash.com/photo-1561361513-2d000a50f0dc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1776&q=80"/>
-      </div>
-
-
-
-
-
+          <div class="my-2 d-flex justify-content-center ">
+            <p class="card-text-dashboard" style="color: #003459;">Marque du Van - Lieu</p>
+          </div>
+          <div class="d-flex flex-row justify-content-around">
+            <p><span style="color: #005FA3; font-size: 14px; font-weight: 400;">Date de départ - Date de fin</span></p>
+            <p class= "days"> In 48 days</p>
+          </div>
+        </div>
+        <img class="card-trip-img-dashboard" src="https://images.unsplash.com/photo-1561361513-2d000a50f0dc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1776&q=80"/>
       </div>
     </div>
 
-
-
-
-    </div>
   </div>
-</div>
-</div>
 </div>
