--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,23 +2,22 @@
   <div class="navbar-left">
     <div class="navbar-logo">
       <%=link_to dashboard_path do %>
-      <img src="https://www.mpadeco.com/thumb.php?zc=3&f=0&src=/sites/mpadeco/files/products/a7919613977f4838bc2ba176ef45c515.png&fl=none&w=500&h=500" />
+      <img src="https://www.mpadeco.com/thumb.php?zc=3&f=0&src=/sites/mpadeco/files/products/a7919613977f4838bc2ba176ef45c515.png&fl=none&w=500&h=500"/>
     </div>
     <p>Caravana</p>
     <%end%>
   </div>
   <div class="navbar-right" id="navbarSupportedContent">
     <ul class="navbar-nav me-auto">
-      <li class="nav-item active " data-bs-toggle="modal" data-bs-target="#loginModal">
-        <a class="nav-link" href="#">Log In</a>
+      <li class="nav-item active">
+        <a class="nav-link" data-bs-toggle="modal" data-bs-target="#loginModal" href="#">Log In</a>
       </li>
       <li class="nav-item">
         <a data-bs-toggle="modal" data-bs-target="#signinModal" class="nav-link" href="#">Sign Up</a>
       </li>
       <li class="nav-item">
-        <%=link_to "Sign Out",  destroy_user_session_path, data: {turbo_method: :delete}, class:"nav-link" %>
+        <%=link_to "Sign Out",  destroy_user_session_path, data: {turbo_method: :delete}, class:"nav-link"%>
       </li>
     </ul>
   </div>
 </div>
-rr
