--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -32,21 +32,23 @@
 
       <%# CARD DASHBOARD %>
 
+      <% @bookings.each do |booking| %>
       <div class="col-3 card-trip-dashboard border rounded-4 px-0 mb-4 d-flex flex-column justify-content-between">
         <div class="m-2">
           <div class= "d-flex justify-content-center">
             <h2 style="color: #003459;"> Titre Van </h2>
           </div>
           <div class="my-2 d-flex justify-content-center ">
-            <p class="card-text-dashboard" style="color: #003459;">Marque du Van - Lieu</p>
+            <p class="card-text-dashboard" style="color: #003459;"> <%= booking.van.brand %> -  <%= booking.van.location %></p>
           </div>
           <div class="d-flex flex-row justify-content-around">
-            <p><span style="color: #005FA3; font-size: 14px; font-weight: 400;">Date de départ - Date de fin</span></p>
+            <p><span style="color: #005FA3; font-size: 14px; font-weight: 400;"><%= booking.start_date %> - <%= booking.end_date %></span></p>
             <p class= "days"> In 48 days</p>
           </div>
         </div>
         <img class="card-trip-img-dashboard" src="https://images.unsplash.com/photo-1561361513-2d000a50f0dc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1776&q=80"/>
       </div>
+      <% end %>
     </div>
 
   </div>
