--- a/app/views/vans/index.html.erb
+++ b/app/views/vans/index.html.erb
@@ -5,7 +5,7 @@
     <div class="row">
       <div class="col justify-content-around row">
         <% @vans.each do |van| %>
-          <div class="col-3 card-trip border rounded-4 px-0 m-2 d-flex flex-column justify-content-between">
+          <div class="col card-trip border rounded-4 px-0 m-2 d-flex flex-column justify-content-between">
               <div class="d-flex align-items-center ">
                 <div id="carouselExampleIndicators" class=" card-trip-img carousel slide" data-bs-ride="true">
                   <div class="carousel-indicators">
