Van Model - New Columns - Title and capacity

--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -1,4 +1,6 @@
 <%= simple_form_for(van) do |f| %>
+  <%= f.input :title %>
+  <%= f.input :capacity %>
   <%= f.input :brand %>
   <%= f.input :color %>
   <%= f.input :description %>
