--- a/app/views/vans/edit.html.erb
+++ b/app/views/vans/edit.html.erb
@@ -4,7 +4,7 @@
       <div class="van-form">
         <h1>Edit van</h1>
         <div class="mt-3">
-          <%= render "form", van: @van %>
+          <%= render "/shared/form", van: @van %>
         </div>
       </div>
     </div>
