Fix cloudinary, add cloudinary in index, update seed

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar" data-controller="navbar" data-action="scroll@window->navbar#updateNavbar">
   <div class="navbar-left">
     <div class="navbar-logo">
-      <%=link_to dashboard_path do %>
+      <%=link_to root_path do %>
       <img src="https://www.mpadeco.com/thumb.php?zc=3&f=0&src=/sites/mpadeco/files/products/a7919613977f4838bc2ba176ef45c515.png&fl=none&w=500&h=500"/>
     </div>
     <p>Caravana</p>
