--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -31,13 +31,13 @@
                   </div>
                   <div class="carousel-inner">
                     <div class="carousel-item card-trip-img active">
-                      <img src="https://images.unsplash.com/photo-1561361513-2d000a50f0dc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1776&q=80"/>
+                      <%= cl_image_tag van.photos.first.key, height: 300, width: 400, crop: :fill %>
                     </div>
                     <div class="carousel-item card-trip-img">
-                      <img src="https://images.unsplash.com/photo-1561361513-2d000a50f0dc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1776&q=80"/>
+                      <%= cl_image_tag van.photos.second.key, height: 300, width: 400, crop: :fill%>
                     </div>
                     <div class="carousel-item card-trip-img">
-                      <img src="https://images.unsplash.com/photo-1561361513-2d000a50f0dc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1776&q=80"/>
+                      <%= cl_image_tag van.photos.last.key, height: 300, width: 400, crop: :fill%>
                     </div>
                   </div>
                   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -49,8 +49,6 @@
                     <span class="visually-hidden">Next</span>
                   </button>
                 </div>
-
-
 
 
               </div>
