--- a/app/assets/stylesheets/pages/_van.scss
+++ b/app/assets/stylesheets/pages/_van.scss
@@ -52,4 +52,11 @@
       grid-template-columns: 1fr 1fr;
     }
   }
+
+  p{
+    color:#0F0F0F;
+    font-size: 16px;
+    margin-bottom:10px;
+    margin-left:10px;
+  }
 }
