Show Padding Fix

--- a/app/views/vans/show.html.erb
+++ b/app/views/vans/show.html.erb
@@ -1,5 +1,5 @@
 
-<div class="container" style="width:70%;">
+<div class="container p-4" style="width:70%;">
   <h3><%=@van.title%></h3>
   <p><%=@van.location%></p>
 
