--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -78,7 +78,40 @@
 
 
 
-<!-- Modal  SIGN IN-->
+
+
+
+<%# LOG IN  %>
+<div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-body">
+            <div class="form-container">
+              <h2>Log in</h2>
+
+              <%= simple_form_for(resource, as: resource_name, url: session_path(resource_name),  data: {turbo: false}) do |f| %>
+                <div class="form-inputs">
+                  <%= f.input :email,
+                              required: false,
+                              autofocus: true,
+                              input_html: { autocomplete: "email" } %>
+                  <%= f.input :password,
+                              required: false,
+                              input_html: { autocomplete: "current-password" } %>
+                  <%= f.input :remember_me, as: :boolean if devise_mapping.rememberable? %>
+                </div>
+
+                <div class="btn btn-primary btn-sm">
+                  <%= f.button :submit, "Log in", style: "color: white;"  %>
+                </div>
+              <% end %>
+          </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal  SIGN UP-->
 <div class="modal fade" id="signinModal" tabindex="-1" aria-labelledby="signinModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -110,37 +143,6 @@
           <% end %>
         </div>
 
-      </div>
-    </div>
-  </div>
-</div>
-
-
-<!-- Modal LOG IN -->
-<div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-body">
-            <div class="form-container">
-              <h2>Log in</h2>
-
-              <%= simple_form_for(resource, as: resource_name, url: session_path(resource_name),  data: {turbo: false}) do |f| %>
-                <div class="form-inputs">
-                  <%= f.input :email,
-                              required: false,
-                              autofocus: true,
-                              input_html: { autocomplete: "email" } %>
-                  <%= f.input :password,
-                              required: false,
-                              input_html: { autocomplete: "current-password" } %>
-                  <%= f.input :remember_me, as: :boolean if devise_mapping.rememberable? %>
-                </div>
-
-                <div class="btn btn-primary btn-sm">
-                  <%= f.button :submit, "Log in", style: "color: white;"  %>
-                </div>
-              <% end %>
-          </div>
       </div>
     </div>
   </div>
