--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -52,8 +52,9 @@
             </p>
           </div>
         </div>
+        <div class="card-trip-img-dashboard">
          <%= cl_image_tag booking.van.photos.first.key, height: 300, width: 400, crop: :fill %>
-        <%# <img class="card-trip-img-dashboard" src="https://images.unsplash.com/photo-1561361513-2d000a50f0dc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1776&q=80"/> %>
+        </div>
       </div>
       <% end %>
     </div>
