Van Display Card : Index and Dashboard

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -53,8 +53,8 @@
 
               </div>
             <div class="m-2">
-              <div class= "d-flex justify-content-start">
-                <h2 style="color: #003459;"><%=van.brand%> </h2>
+              <div class= "d-flex flex-column justify-content-start">
+                <h2 style="color: #003459;"><%=van.brand%></h2>
               </div>
               <div class="my-2 d-flex flex-column">
                 <p class="card-text" style="color: #003459;"><%=van.location%></p>
