--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -32,7 +32,7 @@
         <div class="col-3 card-trip-dashboard border rounded-4 px-0 mb-4 d-flex flex-column justify-content-between">
           <div class="m-2">
             <div class= "d-flex justify-content-center">
-              <h2 style="color: #003459;"> Titre Van </h2>
+              <h2 style="color: #003459;"><%= booking.van.title %></h2>
             </div>
             <div class="my-2 d-flex justify-content-center ">
               <p class="card-text-dashboard" style="color: #003459;"> <%= booking.van.brand %> -  <%= booking.van.location %></p>
