--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,7 @@
 
 <div class="banner">
   <div class="cover">
-    <h1>Discover what's a trip is.</h1>
+    <h1>Discover what a trip is.</h1>
     <form  class="flex-form">
       <label for="from">
         <i class="ion-location"></i>
@@ -23,7 +23,7 @@
         <% @vans.each do |van| %>
           <div class=" card-trip border rounded-4">
               <div class="d-flex align-items-center ">
-                <div id="carouselExampleIndicators" class=" card-trip-img carousel slide" data-bs-ride="true">
+                <div id="carouselExampleIndicators-<%= van.id %>" class=" card-trip-img carousel slide" data-bs-ride="true">
                   <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -40,11 +40,11 @@
                       <%= cl_image_tag van.photos.last.key, height: 300, width: 400, crop: :fill%>
                     </div>
                   </div>
-                  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators-<%= van.id %>" data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Previous</span>
                   </button>
-                  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators-<%= van.id %>" data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
                   </button>
