--- a/app/assets/stylesheets/pages/_van.scss
+++ b/app/assets/stylesheets/pages/_van.scss
@@ -16,4 +16,41 @@
     align-items: center;
     border-radius: 5px;
   }
+  p{
+    color:black;
+    font-size:16px;
+    margin-bottom:15px;
+    margin-left:25px;
+  }
+
+  .modal-content{
+    background-color: white;
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 100%;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+.my_vans{
+  .cards {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 10px;
+    margin-left: 10px;
+  }
+
+  .card-category {
+    background-size: cover;
+    background-position: center;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+  }
+
 }
