--- a/app/views/pages/my_vans.html.erb
+++ b/app/views/pages/my_vans.html.erb
@@ -1,59 +1,61 @@
-
 <div class="app-container">
   <div class="app-content">
     <div class="app-sidebar">
-      <%= link_to dashboard_path do %>
       <div class="app-sidebar-link">
-        <svg class="link-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="feather feather-pie-chart" viewBox="0 0 24 24">
-          <defs />
+      <%= link_to dashboard_path do %>
+      <div href="" class="app-sidebar-link active">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home">
           <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z" />
           <polyline points="9 22 9 12 15 12 15 22" /></svg>
       </div>
       <% end %>
-      <div href="" class="app-sidebar-link active">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home">
 
+        <svg class="link-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="feather feather-pie-chart" viewBox="0 0 24 24">
+          <defs />
           <path d="M21.21 15.89A10 10 0 118 2.83M22 12A10 10 0 0012 2v10z" />
         </svg>
       </div>
     </div>
-    <div class="projects-section">
-      <div class="projects-section-header">
-        <p>Van locations</p>
-        <p class="time"><%= Time.now %></p>
+
+    <div class="vans-container">
+      <div class="vans-container-header">
+        <div class="vans-container-header-left">
+          <p class="rentals-to-come">Vos vans</p>
+          <p class="rentals-number"><em>  (<%=@vans.count%>)</em></p>
+        </div>
+        <p class="time"><%= Time.now().to_s.split(" ")[0] %></p>
       </div>
-      <div class="projects-section-line">
-        <div class="projects-status">
-          <div class="item-status">
-            <span class="status-number">nombre à revoir</span>
-            <span class="status-type">Upcoming</span>
+
+
+
+      <%# CARD DASHBOARD %>
+
+        <% if @vans.empty? %>
+        <div class="my_vans d-flex justify-content-center" style="margin-bottom:20px">
+          <div class="cards" style="height:300px;width:600px">
+            <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1561361513-2d000a50f0dc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1776&q=80)">
+            <span style="color: white;">Add your first van!</span> <br>
+            <i style="color: white;" class="fa-solid fa-plus"></i>
           </div>
         </div>
-      </div>
-      <div class="project-boxes jsGridView">
-        <div class="project-box-wrapper">
-          <div class="project-box" style="background-color: #fee4cb;">
-            <div class="project-box-header">
-              <div class="more-wrapper">
-                <button class="project-btn-more">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-vertical">
-                    <circle cx="12" cy="12" r="1" />
-                    <circle cx="12" cy="5" r="1" />
-                    <circle cx="12" cy="19" r="1" /></svg>
-                </button>
+        <% else%>
+        <div class = "dashboard-cards" >
+          <% @vans.each do |van| %>
+          <div class="col-3 card-trip-dashboard border rounded-4 px-0 mb-4 d-flex flex-column justify-content-between">
+            <div class="m-2">
+              <div class= "d-flex justify-content-center">
+                <h2 style="color: #003459;"> Titre Van </h2>
+              </div>
+              <div class="my-2 d-flex justify-content-center ">
+                <p class="card-text-dashboard" style="color: #003459;"> <%= van.brand %> -  <%= van.location %></p>
+              </div>
+            </div>
+            <img class="card-trip-img-dashboard" src="https://images.unsplash.com/photo-1561361513-2d000a50f0dc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1776&q=80"/>
           </div>
-        </div>
-        <div class="project-box-content-header">
-          <p class="box-content-subheader">mercedes</p>
-        </div>
-        <div class="image_trip">
-          <img src="https://images.unsplash.com/photo-1561361513-2d000a50f0dc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1776&q=80" alt="" style="width:100%; height:60%; object-fit: cover;">
-        </div>
-        <div class="project-box-footer">
-        </div>
-      </div>
+          <% end %>
+          </div>
+        <%end%>
     </div>
+
   </div>
-</div>
-</div>
 </div>
