--- a/app/views/vans/show.html.erb
+++ b/app/views/vans/show.html.erb
@@ -4,6 +4,7 @@
   <p><%=@van.location%></p>
 
 </div>
+<a href="" data-bs-toggle="modal" data-bs-target="#modalphoto">
 <div class="container van-show"  style="width:70%;">
   <div class="d-flex">
     <div class="big-card" style="height:400px;width:50%">
@@ -16,16 +17,59 @@
         <% end %>
     </div>
   </div>
+  </a>
+<!-- Button trigger modal -->
+<% @count = 0 %>
+<!-- Modal -->
+<div class="van-show">
+<div class="modal fade" id="modalphoto" tabindex="-1" aria-labelledby="modalphotoLabel" aria-hidden="true">
+  <div class="modal-dialog" >
+    <div class="modal-content" style="background-color:white">
+      <div class="modal-header" style="background-color:white">
+        <h5 class="modal-title" id="modalphotoLabel">Photos</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body" style="background-color:white">
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+          <% @van.photos.each do |photo| %>
+            <% if @count == 0 %>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="<%=@count%>" class="active" aria-current="true" aria-label="Slide <%=@count + 1%>"></button>
+            <% else %>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="<%=@count%>" aria-label=Slide <%=@count + 1%>"></button>
+            <% end %>
+          <% @count += 1 %>
+          <% end %>
+          </div>
+          <div class="carousel-inner">
+            <% @van.photos.each do |photo| %>
+              <div class="carousel-item active">
+                <img src="<%= cl_image_path photo.key, height: 600, crop: :fill %>" class="d-block w-100" alt="photo van">
+              </div>
+            <% end %>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
+</div>
 
   <div class="d-flex">
     <div style="margin-top:20px;width:65%">
         <div class="border-bottom">
           <h4><%=@van.brand%></h4>
-          <p> <%= @van.capacity %></p>
-          <p><i class="fa-solid fa-user-group"></i>3 people</p>
+          <p><i class="fa-solid fa-user-group"> </i> <%= @van.capacity%> peoples</p>
         </div>
-
         <div class="border-bottom" style="margin-top:20px">
           <h4>Van proposition:</h4>
           <p style="margin-bottom:10px"><%=@van.description%></p>
@@ -39,15 +83,15 @@
           <p><i class="fa-solid fa-arrows-left-right-to-line"></i>  5 meters long</p>
           <p style="margin-bottom:25px"><i class="fa-solid fa-truck-droplet"></i>  13 liter per KM</p>
 
-          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalequipment">
             See equipments
           </button>
 <!-- Modal -->
-          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal fade" id="modalequipment" tabindex="-1" aria-labelledby="modalequipmentLabel" aria-hidden="true">
             <div class="modal-dialog">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h5 class="modal-title" id="exampleModalLabel">All equipments</h5>
+                  <h5 class="modal-title" id="modalequipmentLable">All equipments</h5>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -66,8 +110,8 @@
         </div>
       </div>
     <div style="width:35%">
-      <div class="card card-trip" style="background-color:white;margin-top:15px;">
-        <div class="card-body" style="position: sticky;">
+      <div class="card card-trip" style="background-color:white;margin-top:15px;position:sticky;top:15px">
+        <div class="card-body">
           <h6 class="card-title" style="text-align:"><%=@van.price_per_day%>€ / nuit</h6>
             <%= simple_form_for [@van, @booking] do |f| %>
             <%= f.input :start_date, as: :date, html5: true %>
