photos sur show van et display de la page plus agréable plus un autre

--- a/app/assets/stylesheets/pages/_van.scss
+++ b/app/assets/stylesheets/pages/_van.scss
@@ -24,6 +24,10 @@
   }
 
   .modal-content{
+    color: white;
+    margin-top: 200px;
+    p{text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+      color: white;}
     background-color: white;
     background-size: cover;
     background-position: center;
