--- a/app/assets/stylesheets/components/_connexion-form.scss
+++ b/app/assets/stylesheets/components/_connexion-form.scss
@@ -1,4 +1,5 @@
 .modal-content{
+  margin-top: 200px;
   background-image: url("https://images.unsplash.com/photo-1597131527856-13cdb8dc050e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3009&q=80");
   background-size: cover;
   background-position: center;
