add a lot of features

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -19,8 +19,8 @@
     <div class="vans-container">
       <div class="vans-container-header">
         <div class="vans-container-header-left">
-          <p class="rentals-to-come">Locations à venir </p>
-          <p class="rentals-number"><em>  (<%=Booking.all.count%>)</em></p>
+          <p class="rentals-to-come">Upcoming rentals <em>(<%=Booking.all.count%>)</em> </p>
+
         </div>
         <p class="time"><%= Time.now().to_s.split(" ")[0] %></p>
       </div>
