--- a/app/views/pages/my_vans.html.erb
+++ b/app/views/pages/my_vans.html.erb
@@ -34,8 +34,8 @@
         <div class="my_vans d-flex justify-content-center" style="margin-bottom:20px">
           <div class="cards" style="height:300px;width:600px">
             <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1561361513-2d000a50f0dc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1776&q=80)">
-            <span style="color: white;">Add your first van!</span> <br>
-            <i style="color: white;" class="fa-solid fa-plus"></i>
+            <button class="btn btn-primary" style="color: white;">Add your Van <i style="color: white;" class="fa-solid fa-plus"></i></button>
+
           </div>
         </div>
         <% else%>
