--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,13 +10,24 @@
   <div class="navbar-right" id="navbarSupportedContent">
     <ul class="navbar-nav me-auto">
       <li class="nav-item active">
+      <% if !current_user %>
         <a class="nav-link" data-bs-toggle="modal" data-bs-target="#loginModal" href="#">Log In</a>
+      <% end %>
       </li>
       <li class="nav-item">
-        <a data-bs-toggle="modal" data-bs-target="#signinModal" class="nav-link" href="#">Sign Up</a>
+        <% if !current_user %>
+          <a data-bs-toggle="modal" data-bs-target="#signinModal" class="nav-link" href="#">Sign Up</a>
+        <% end %>
       </li>
       <li class="nav-item">
-        <%=link_to "Sign Out",  destroy_user_session_path, data: {turbo_method: :delete}, class:"nav-link"%>
+      <% if current_user %>
+        <%=link_to "Dashboard",  dashboard_path,  class:"nav-link"%>
+      <% end %>
+      </li>
+      <li class="nav-item">
+        <% if current_user %>
+          <%=link_to "Sign Out",  destroy_user_session_path, data: {turbo_method: :delete}, class:"nav-link"%>
+        <% end %>
       </li>
     </ul>
   </div>
