Seed Improve / Show Small Front Fix

--- a/app/assets/stylesheets/pages/_van.scss
+++ b/app/assets/stylesheets/pages/_van.scss
@@ -1,3 +1,12 @@
+.header-show-container{
+  padding-top: 80px;
+  margin-bottom: 10px;
+}
+
+#p-location{
+  margin-left: 0;
+  padding: 0;
+}
 .van-show{
 
   .cards {
