--- a/app/views/vans/show.html.erb
+++ b/app/views/vans/show.html.erb
@@ -1,8 +1,7 @@
 
-<div class="container p-4" style="width:80%;">
+<div class="container header-show-container" style="width:80%;">
   <h3><%=@van.title%></h3>
-  <p><%=@van.location%></p>
-
+  <p><i class="fa-solid fa-location-dot"></i> <%=@van.location%></p>
 </div>
 <a href="" data-bs-toggle="modal" data-bs-target="#modalphoto">
 <div class="container van-show"  style="width:80%;">
@@ -68,7 +67,7 @@
     <div style="margin-top:20px;width:65%">
         <div class="border-bottom">
           <h4><%=@van.brand%></h4>
-          <p><i class="fa-solid fa-user-group"> </i> <%= @van.capacity%> peoples</p>
+          <p><i class="fa-solid fa-user-group"> </i> <%= @van.capacity%> persons</p>
         </div>
         <div class="border-bottom" style="margin-top:20px">
           <h4>Van proposition:</h4>
@@ -77,11 +76,11 @@
         <div class="d-flex justify-content-between
         ">
           <div  class="pe-5" style="margin-top:20px">
-            <h4>Van Caracteristics:</h4>
-            <p><i class="fa-solid fa-road"></i>  <%= @van.mileage %> mileage</p>
+            <h4>Van Characteristics:</h4>
+            <p><i class="fa-solid fa-road"></i>  <%= @van.mileage.to_s.gsub(/\d(?=(...)+$)/, '\0 ') %> mileage</p>
             <p><i class="fa-solid fa-brush"></i>  <%= @van.color %></p>
             <p><i class="fa-solid fa-gas-pump"></i>  Gaz</p>
-            <p><i class="fa-solid fa-gear"></i>  Automatic gearbox</p>
+            <p><i class="fa-solid fa-gear"></i>  Automatic Gearbox</p>
             <p><i class="fa-solid fa-arrows-left-right-to-line"></i>  5 meters long</p>
             <p style="margin-bottom:25px"><i class="fa-solid fa-truck-droplet"></i>  13 liter per KM</p>
           </div>
@@ -125,7 +124,7 @@
 <div class="container van-show border-top d-flex justify-content-center"  style="width:80%;margin-top:20px">
     <div style="margin-top:20px">
       <h4>Van location</h4>
-      <p><%=@van.location%></p>
+      <p id="p-location"><%=@van.location%></p>
     </div>
 </div>
 
