maps/navbar/form

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
   </body>
-  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <%# <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="sweetalert2.all.min.js"></script>
   <script>
   document.getElementById('confirm-reservation').addEventListener(submit, fonction()) {
@@ -39,6 +39,6 @@ Swal.fire({
   `
 })
   }
-</script>
+</script> %>
 
 </html>
