--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -58,11 +58,14 @@
   width: 25px;
 }
 
-.accueil :hover {
-  // box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+.accueil:hover {
+  box-shadow: 1px 2px 2px 1px rgba(0, 0, 0, 0.1);
 
 }
 
+// .test :hover {
+//   box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.2);
+// }
 
 .dropdown-menu {
   --bs-dropdown-min-width: 10rem;
@@ -79,7 +82,7 @@
   --bs-dropdown-divider-bg: var(--bs-border-color-translucent);
   --bs-dropdown-divider-margin-y: 0.5rem;
   --bs-dropdown-link-color: #005FA3;
-  --bs-dropdown-link-hover-color: #1e2125;
+  --bs-dropdown-link-hover-color: #005FA3;
   --bs-dropdown-link-hover-bg: #f6f6f6;
   --bs-dropdown-link-active-color: #fff;
   --bs-dropdown-link-active-bg: #0D6EFD;
