--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -6,7 +6,7 @@
   <%= f.input :description %>
   <%= f.input :price_per_day%>
   <%= f.input :mileage %>
-  <%= f.input :location, input_html: {data: {location_autocomplete_target: "location"}}, wrapper_html: {data: {controller: "location-autocomplete", location_autocomplete_api_key_value: ENV["MAPBOX_API_KEY"]}} %>
+  <%= f.input :location, input_html: {data: {location_autocomplete_target: "location"}, class: "d-none"}, wrapper_html: {data: {controller: "location-autocomplete", location_autocomplete_api_key_value: ENV["MAPBOX_API_KEY"]}} %>
   <%= f.input :photo, as: :file %>
   <%= f.submit "create your van", class: "btn btn-primary" %>
 <% end %>
