--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,12 +13,12 @@
        <li class="nav-item active">
             <%= link_to "Rent your Van",  new_van_path, class: "nav-link" %>
         </li>
-      <li class=" accueil  nav-item dropdown">
-        <div class=" d-flex justify-content-around rounded-pill border p-1 align-items-center " data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style= "width: 79px; height: 43px;">
-          <i class="fa-solid fa-bars"></i>
-          <img class="avatar dropdown-toggle" id="navbarDropdown"  src="https://kitt.lewagon.com/placeholder/users/ssaunier" />
+      <li class="   nav-item dropdown">
+        <div class=" d-flex accueil justify-content-around rounded-pill border p-1 align-items-center " data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style= "width: 79px; height: 43px;">
+          <i class="fa-solid fa-bars test" style="opacity: 0.6"></i>
+          <img class="avatar dropdown-toggle test" id="navbarDropdown"  src="https://kitt.lewagon.com/placeholder/users/ssaunier" />
         </div>
-        <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown" style="position: absolute;">
+        <div class="dropdown-menu dropdown-menu-end test" aria-labelledby="navbarDropdown" style="position: absolute;">
           <a class="dropdown-item " href="#">Profile</a>
           <%=link_to "Dashboard",  dashboard_path,  class:"dropdown-item"%>
           <%=link_to "Sign Out",  destroy_user_session_path, data: {turbo_method: :delete}, class:" dropdown-item"%>
