--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -5,10 +5,14 @@
   width: 100%;
   display: flex;
   height: 100%;
+  padding-top: 100px;
 }
+
+
 
 .app-content{
   display: flex;
+  flex-direction: row;
   height: 100%;
   width: 95%;
 }
@@ -47,6 +51,7 @@
   flex: 2;
   background-color: white;
   border-radius: 32px;
+  margin-top: 10px;
   padding: 32px 32px 0 32px;
   overflow: hidden;
   height: 100%;
@@ -95,4 +100,17 @@
 
 .vans-upcoming{
   margin: 10px 0px;
+}
+
+// WHEN COUNT =0
+
+.vans-container-empty{
+  height: 300px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.vans-container-empty p{
+  color: black;
 }
