--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -96,3 +96,16 @@
 .vans-upcoming{
   margin: 10px 0px;
 }
+
+.card-trip-dashboard{
+  .link-review{
+    position:absolute;
+    top:-10px;
+    right:10px;
+    border-radius: 30%;
+    background-color: #50C878;
+    color:white;
+    text-decoration: none;
+    padding:6px;
+  }
+}
