--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -120,31 +120,22 @@
                   </div>
                   <div class="d-flex flex-row justify-content-around">
                     <p><span style="color: #005FA3; font-size: 14px; font-weight: 400;"><%= booking.start_date %> - <%= booking.end_date %></span></p>
-                    <p class= "days">
-                      <% @s = booking.start_date.to_s.split("-").map{|el| el.to_i}
-                          @a = Time.now().to_s.split(" ")[0].split("-").map{ |el| el.to_i}
-                          @r = ((@s[0] - @a[0]) * 360) + ((@s[1] - @a[1]) * 30) + ((@s[2] - @a[2]))
-                            %>
-                      <%if @r < 0 %>
-                        <%= "#{@r * (-1)} days ago" %>
-                      <%else%>
-                        <%= "In #{@r} days" %>
-                      <%end%>
-                    </p>
+                      <% unless booking.review %>
+                        <p class= "days">
+                          <%= link_to "add a review", new_booking_review_path(booking.id), style: 'text-decoration: none; color:#white' %>
+                        </p>
+                      <% end %>
+                    <%end%>
                   </div>
                 </div>
                   <div class="card-trip-img-dashboard">
                     <%= cl_image_tag booking.van.photos.first.key, height: 300, width: 400, crop: :fill %>
                   </div>
               </div>
-              <%end%>
             <% end %>
         </div>
       </div>
 </div>
-
-
-
 
 
 </div>
