fix bugs on homepage

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -25,10 +25,10 @@
         </div>
       </li>
         <% else %>
-      <li class="nav-item accueil dropdown">
-        <div class=" d-flex justify-content-around rounded-pill border p-1 align-items-center " data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style= "width: 79px; height: 43px;">
-          <i class="fa-solid fa-bars"></i>
-          <img class="avatar dropdown-toggle" id="navbarDropdown"  src="https://kitt.lewagon.com/placeholder/users/ssaunier" />
+      <li class="nav-item  dropdown">
+        <div class=" d-flex accueil justify-content-around rounded-pill border p-1 align-items-center " data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style= "width: 79px; height: 43px;">
+          <i class="fa-solid fa-bars" style="opacity: 0.6"></i>
+          <img class="avatar dropdown-toggle" id="navbarDropdown"  src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQHimFRTPYnVrGb7S6yk-D_qWW1yBOoehe1vQ&usqp=CAU" />
         </div>
         <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown" style="position: absolute;">
           <a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#loginModal" href="#">Log In</a>
