--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,7 @@
 
 <div class="banner">
   <div class="cover">
-    <h1>Discover what's a trip is.</h1>
+    <h1>Discover what a trip is.</h1>
     <form  class="flex-form">
       <label for="from">
         <i class="ion-location"></i>
@@ -21,7 +21,7 @@
 <div class="mx-auto mt-5" style="width: 90%;">
   <div class="cards">
     <% @vans.each do |van| %>
-    <%= link_to van_path(van) do %>
+    <%= link_to van_path(van), style: "text-decoration: none;" do %>
       <div class="card-trip border rounded-4">
         <div class="d-flex align-items-center ">
           <div id="carouselExampleIndicators-<%=van.id%>" class=" card-trip-img carousel slide" data-bs-ride="true">
