--- a/app/views/pages/my_vans.html.erb
+++ b/app/views/pages/my_vans.html.erb
@@ -57,9 +57,9 @@
                 <div class="col-3 card-trip-dashboard border rounded-4 px-0 mb-4 d-flex flex-column justify-content-between">
                 <div class="m-2">
                   <div class= "d-flex justify-content-center">
-                    <h2 style="color: #003459;"> Titre Van </h2>
+                    <h2 style="color: #003459;"><%= van.title %></h2>
                   </div>
-                  <div class="my-2 d-flex justify-content-center ">
+                  <div class="my-2 d-flex justify-content-center align-items-center ">
                     <p class="card-text-dashboard" style="color: #003459;"> <%= van.brand %> -  <%= van.location %></p>
                     <%= link_to "", van_path(van), data:{turbo_method: :delete, turbo_confirm: "Are you sure?"}, style: "text-decoration: none;  ", class:"fa-solid fa-trash-can" %>
                   </div>
