add connexion and optimize show

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar" data-controller="navbar">
+<div class="navbar border-bottom" data-controller="navbar">
   <div class="navbar-left">
     <div class="navbar-logo">
       <%=link_to root_path do %>
