--- a/app/assets/stylesheets/components/_connexion-form.scss
+++ b/app/assets/stylesheets/components/_connexion-form.scss
@@ -36,3 +36,12 @@
     color: rgb(219, 219, 219);
   }
 }
+
+.modal-content-show{
+  margin-top: 200px;
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 100%;
+  border-radius: 15px;
+}
