review page done

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -45,3 +45,17 @@ abbr[title] {
   backdrop-filter: blur(5px);
 
 }
+
+
+.van-form {
+
+  color: #ffffff;
+  padding: 20px;
+  border-radius: 15px;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+
+  background:  linear-gradient(#ceebfc3b, #80acff37); //rgba(255, 255, 255, 0.254);
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  backdrop-filter: blur(5px);
+
+}
