--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -103,6 +103,8 @@
             <%= f.error_notification %>
 
             <div class="form-inputs">
+              <%= f.input :first_name %>
+              <%= f.input :last_name %>
               <%= f.input :email,
                           required: true,
                           autofocus: true,
@@ -189,5 +191,3 @@
     <%= radio_button_tag 'radioGroup', "2" %> 2 &nbsp;&nbsp;&nbsp;
     <%= radio_button_tag 'radioGroup', "4" %> 4 &nbsp;&nbsp;&nbsp;
 </div>
-
-
