--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,8 +1,22 @@
-<div class="col margin:20px;" style="background-color:white;padding:15px">
-    <h1>New review</h1>
-      <%= simple_form_for [@booking, @review] do |f| %>
-        <%= f.input :content %>
-        <%= f.input :rating, collection: (1..5).to_a, label: "Rate your experience", input_html: {data: {controller: "star-rating"}} %>
-        <%= f.submit "Submit review", class: "btn btn-primary" %>
-      <% end %>
+
+
+
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(<%= cl_image_path @booking.van.photos.first.key %>);">
+  <div class="col-6" style="margin:73px auto">
+    <div class="van-form">
+      <div class="mt-3">
+
+
+        <div class="col margin:20px;" >
+            <h5>Tell us about your experience with <%=@booking.van.user.first_name%>'s van!</h5>
+              <%= simple_form_for [@booking, @review] do |f| %>
+                <%= f.input :content %>
+                <%= f.input :rating, collection: (1..5).to_a, label: "Rate your experience", input_html: {data: {controller: "star-rating"}} %>
+                <%= f.submit "Submit review", class: "btn btn-classic-new" %>
+              <% end %>
+        </div>
+
+      </div>
+    </div>
+  </div>
 </div>
