--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,41 +1,47 @@
 <div class="navbar border-bottom" data-controller="navbar">
-  <div class="navbar-left">
-    <div class="navbar-logo">
-      <%=link_to root_path do %>
-      <i class="fa-solid fa-bus" style="font-size: 24px;"></i>
+  <div class="navbar-content mx-5 d-flex justify-content-between" style="width:100%;">
+
+
+
+    <div class="navbar-left">
+      <div class="navbar-logo">
+        <%=link_to root_path do %>
+        <i class="fa-solid fa-bus" style="font-size: 24px;"></i>
+      </div>
+      <p>Caravana</p>
+      <%end%>
     </div>
-    <p>Caravana</p>
-    <%end%>
-  </div>
-  <div class="navbar-right" id="navbarSupportedContent">
-    <ul class="navbar-nav me-auto">
-      <% if current_user %>
-       <li class="nav-item active">
-            <%= link_to "Rent your Van",  new_van_path, class: "nav-link" %>
+    <div class="navbar-right" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto">
+        <% if current_user %>
+        <li class="nav-item d-flex align-items-center active">
+              <%= link_to "Rent your Van",  new_van_path, class: "nav-link" %>
+          </li>
+        <li class="  nav-item dropdown">
+          <div class=" d-flex accueil justify-content-around rounded-pill border p-1 align-items-center " data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style= "width: 79px; height: 43px;">
+            <i class="fa-solid fa-bars test" style="opacity: 0.6; color:#005FA3;"></i>
+            <img class="avatar dropdown-toggle test" id="navbarDropdown"  src="https://kitt.lewagon.com/placeholder/users/ssaunier" />
+          </div>
+          <div class="dropdown-menu dropdown-menu-end test" aria-labelledby="navbarDropdown" style="position: absolute;">
+            <a class="dropdown-item " href="#">Profile</a>
+            <%=link_to "Dashboard",  dashboard_path,  class:"dropdown-item"%>
+            <%=link_to "Sign Out",  destroy_user_session_path, data: {turbo_method: :delete}, class:" dropdown-item"%>
+          </div>
         </li>
-      <li class="   nav-item dropdown">
-        <div class=" d-flex accueil justify-content-around rounded-pill border p-1 align-items-center " data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style= "width: 79px; height: 43px;">
-          <i class="fa-solid fa-bars test" style="opacity: 0.6; color:#005FA3;"></i>
-          <img class="avatar dropdown-toggle test" id="navbarDropdown"  src="https://kitt.lewagon.com/placeholder/users/ssaunier" />
-        </div>
-        <div class="dropdown-menu dropdown-menu-end test" aria-labelledby="navbarDropdown" style="position: absolute;">
-          <a class="dropdown-item " href="#">Profile</a>
-          <%=link_to "Dashboard",  dashboard_path,  class:"dropdown-item"%>
-          <%=link_to "Sign Out",  destroy_user_session_path, data: {turbo_method: :delete}, class:" dropdown-item"%>
-        </div>
-      </li>
-        <% else %>
-      <li class="nav-item  dropdown">
-        <div class=" d-flex accueil justify-content-around rounded-pill border p-1 align-items-center " data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style= "width: 79px; height: 43px;">
-          <i class="fa-solid fa-bars" style="opacity: 0.6"></i>
-          <img class="avatar dropdown-toggle" id="navbarDropdown"  src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQHimFRTPYnVrGb7S6yk-D_qWW1yBOoehe1vQ&usqp=CAU" />
-        </div>
-        <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown" style="position: absolute;">
-          <a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#loginModal" href="#">Log In</a>
-          <a data-bs-toggle="modal" data-bs-target="#signinModal" class="dropdown-item" href="#">Sign Up</a>
-        </div>
-      </li>
-        <% end %>
-    </ul>
+          <% else %>
+        <li class="nav-item  dropdown">
+          <div class=" d-flex accueil justify-content-around rounded-pill border p-1 align-items-center " data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style= "width: 79px; height: 43px;">
+            <i class="fa-solid fa-bars" style="opacity: 0.6"></i>
+            <img class="avatar dropdown-toggle" id="navbarDropdown"  src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQHimFRTPYnVrGb7S6yk-D_qWW1yBOoehe1vQ&usqp=CAU" />
+          </div>
+          <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown" style="position: absolute;">
+            <a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#loginModal" href="#">Log In</a>
+            <a data-bs-toggle="modal" data-bs-target="#signinModal" class="dropdown-item" href="#">Sign Up</a>
+          </div>
+        </li>
+          <% end %>
+      </ul>
+    </div>
+
   </div>
 </div>
