--- a/app/views/vans/new.html.erb
+++ b/app/views/vans/new.html.erb
@@ -3,7 +3,7 @@
     <h1 class="text-center">Rent your Van!</h1>
   </div>
   <div class="col-6" style="margin:73px auto">
-    <div class="van-form">
+    <div class="">
       <div class="mt-3">
         <%= render "/shared/form", van: @van %>
       </div>
